# aoc-2024

./: .deps.json  .gitignore  Cargo.toml  README.md  deps.py  done.py  lib.py  new_day.py  pyproject.toml  run_all.py  status.py
src/: aocd.rs  aocd_submit_wrapper.py  block_print.rs  driver.rs  geom2d.rs  hist.rs  lib.rs  ord.rs  timing.rs  util.rs  viz.rs  y2015.rs  y2016.rs  y2017.rs  y2018.rs  y2019.rs  y2020.rs  y2021.rs  y2022.rs  y2023.rs  y2024.rs
src/block_print/: font_5x6.rs  font_6x10.rs  font_x8.rs
src/viz/: graphviz.rs
src/y2015/: aunt_sue_16.rs  not_quite_lisp_01.rs  probably_a_fire_hazard_06.rs
src/y2016/: a_maze_of_twisty_little_cubicles_13.rs  an_elephant_named_joseph_19.rs  leonardo_s_monorail_12.rs  leonardos_monorail_12.rs  no_time_for_a_taxicab_01.rs  radioisotope_thermoelectric_generators_11.rs  radioisotope_thermoelectric_generators_11_again.rs
src/y2017/: coprocessor_conflagration_23.rs  corruption_checksum_02.rs  inverse_captcha_01.rs
src/y2018/: alchemical_reduction_05.rs  reservoir_research_17.rs  the_stars_align_10.rs
src/y2019/: _1202_program_alarm_02.rs  space_image_format_08.rs  space_stoichiometry_14.rs
src/y2020/: crab_combat_22.rs  operation_order_18.rs  passport_processing_04.rs  report_repair_01.rs  seating_system_11.rs
src/y2021/: dive_02.rs  sonar_sweep_01.rs  the_treachery_of_whales_07.rs
src/y2022/: calorie_counting_01.rs  distress_signal_13.rs  grove_positioning_system_20.rs  rope_bridge_09.rs
src/y2023/: a_long_walk_23.rs  (+3 more)
util/: aoc_all_2024.py  lib.py
viz/: crossed_wires_0001.gv  crossed_wires_0002.gv
(+26 files in other folders)
