[package]
name = "aoc-2024"
version = "0.1.0"
authors = ["Barney Boisvert <bboisvert@gmail.com>"]
edition = "2021"

[dependencies]
console = "0.15.8"
regex = "1.11.1"
anyhow = "1.0.91"
lazy_static = "1.5.0"
nannou = "0.19.0"
petgraph = "0.6.5"
symbol_table = { version = "0.4.0", features = ["global"] }

[lib]
name = "aoc"
